--- a/style.css
+++ b/style.css
@@ -102,6 +102,16 @@ body{
     color: var(--dark-grey);
 }
 
+
+.hero-projects{
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: var(--dark-grey);
+}
+
+
+
 .hero .hero-heading .heading-inverted {
     color: var(--primary-color);
 }
